<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimplePhonebook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dbadapter">DBAdapter</string>
    <string name="button_add">Add contact</string>
    <string name="button_clear">Clear</string>
    <string name="button_show_all">Show all</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="add_firstname">First name here</string>
    <string name="add_lastname">Last name here</string>
    <string name="add_phonenum">Phonenumber here</string>
    <string name="title_activity_show_picture">ShowPicture</string>

</resources>
