<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    
    
    <EditText android:id="@+id/add_firstname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_firstname" />
    
    <EditText android:id="@+id/add_lastname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_firstname"
        android:hint="@string/add_lastname" />
    
    <EditText android:id="@+id/add_phonenum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_lastname"
        android:hint="@string/add_phonenum" />
    
    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_phonenum"
        android:layout_alignParentLeft="true" >
        

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_AddRecord"
            android:text="@string/button_add" />
        
        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_ClearAll"
            android:text="@string/button_clear" />
        
        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_DisplayRecords"
            android:text="@string/button_show_all" />
    </LinearLayout>

    <EditText
        android:id="@+id/textDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/buttonBar"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine" >
    </EditText>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_firstname"
        android:layout_alignBottom="@+id/add_firstname"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_phonenum"
        android:layout_alignBottom="@+id/add_phonenum"
        android:layout_alignLeft="@+id/add_phonenum"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_lastname"
        android:layout_alignBottom="@+id/add_lastname"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="textPersonName" />
   

</RelativeLayout>